Fixed search icon not showing

--- a/index-page/styles.css
+++ b/index-page/styles.css
@@ -147,7 +147,8 @@ button {
 	color: rgba(255, 255, 255, 0.7);
 	border: 1px solid rgb(252, 196, 45);
 	border-radius: 25px;
-	font-size: 1.4rem;
+	font-size: 1rem;
+	line-height: 1.4rem;
 	animation-name: opacify;
 	animation-direction: reverse;
 	animation-fill-mode: backwards;
